Probando reset checkOut

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         Prueba de pagina web: 
         
         Prueba de GitHub
+        Prueba reset CheckOut
 
         Te amo mucho <3 
     </p>
