--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba</title>
+    <title>Prueba HTML con reset para Git</title>
 </head>
 <body>
+    <h1>POST para la prueba</h1>
     <p>
         Prueba de pagina web: 
         
