HTML y Css con estilos

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba HTML con reset para Git</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <h1>POST para la prueba</h1>
