Cambios en Html y Css para pagina web

--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
-    <h1>POST para la prueba</h1>
-    <p>
-        Prueba de pagina web: 
+    <div id="container";
+        <div id="post";
+            <h1>POST para la prueba</h1>
+            <p>
+                Prueba de pagina web: 
         
-        Prueba de GitHub
-        Prueba reset CheckOut
-        Restablecer
+                Prueba de GitHub
+                Prueba reset CheckOut
+                Restablecer
 
-        Te amo mucho <3 
-    </p>
+                Te amo mucho <3 
+            </p>
+        </div>
+    </div>
 </body>
 </html>
