--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prueba HTML con reset para Git</title>
-    <link rel="stylesheet" href="css/estilos.css">
-</head>
-<body>
-    <div id="container";
-        <div id="post";
-            <h1>POST para la prueba</h1>
-            <p>
-                Prueba de pagina web: 
-        
-                Prueba de GitHub
-                Prueba reset CheckOut
-                Restablecer
-
-                Te amo mucho <3 
-            </p>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Prueba HTML con reset para Git</title>
+        <link rel="stylesheet" href="css/estilos.css">
+    </head>
+    <body>
+        <div id="container";
+            <div id="cabecera">
+                Cabecera
+            </div>
+            <div id="post";
+                <h1>POST para la prueba</h1>
+                <p>Prueba de pagina web: 
+                    Prueba de GitHub
+                    Prueba reset CheckOut
+                    Restablecer</p>
+            </div>
         </div>
-    </div>
-</body>
+    </body>
 </html>
