--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Prueba HTML con reset para Git</title>
         <link rel="stylesheet" href="css/estilos.css">
     </head>
     <body>
         <div id="container";
             <div id="cabecera">
-                Cabecera
+                Hyperblog
+                <span id="tagline">
+                    Tu blog
+                </span>
             </div>
             <div id="post";
                 <h1>POST para la prueba</h1>
