Agredado el contenido mejorado para la prueba

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 
                 Te amo mucho <3 
             </p>
+            <p>
+                Este es un nuevo parrafo para probar el merge
+                
+            </p>
         </div>
     </div>
 </body>
