prueba para el merge

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                     Prueba de GitHub
                     Prueba reset CheckOut
                     Restablecer</p>
+                <p>
+                    Prueba para el merge
+                </p>
             </div>
         </div>
     </body>
