Borrando en el index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
     <head>
         <title>Prueba HTML con reset para Git</title>
         <link rel="stylesheet" href="css/estilos.css">
