--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div id="cabecera">
                 Hyperblog
                 <span id="tagline">
-                    Tu blog
+                    Tu blog cabecera
                 </span>
             </div>
             <div id="post">
