Cabecera maestro, color azul y cambio sin conflic

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 <p>
                     Prueba para el merge
                 </p>
+                <p>Este el el cambio sin 
+                    conflicto.
+                </p>
             </div>
         </div>
     </body>
