Prueba Merli y erick

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 </p>
                 <p>Este el el cambio sin 
                     conflicto.
+                    Prueba Kate y Erick
                 </p>
             </div>
         </div>
