Color de fondo y logo nuevo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagenes/Ubuntu.png" />
                 Hyperblog 2.0
                 <span id="tagline">
                     Tu blog cabecera
