Probando el footer

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                     Prueba Kate y Erick
                 </p>
             </div>
+            <div id="footer">
+                Probando el Footer
+            </div>
         </div>
     </body>
 </html>
