--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <p>Este el el cambio sin 
                     conflicto.
                     Prueba Kate y Erick
+                    Este es el fix-typo 
                 </p>
             </div>
             <div id="footer">
